--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -35,7 +35,7 @@
   height: 50px;
 }
 
-#new-game-button {
+#new-game-button, #new-game-dialog-button {
   width: 80px;
   height: 40px;
   font-family: sans-serif;
@@ -48,11 +48,11 @@
   box-shadow: 3px 3px 5px grey;
 }
 
-#new-game-button:focus {
+#new-game-button:focus, #new-game-dialog-button:focus {
   outline: none;
 }
 
-#new-game-button:active {
+#new-game-button:active, #new-game-dialog-button:active {
   margin-top: 1px;
   box-shadow: 1px 1px 1px #dfdfdf;
 }
@@ -70,13 +70,12 @@
   text-align: center;
   border: solid green 2px;
   box-shadow: 5px 5px 5px grey;
-  z-index: 1;
 }
 
 #game-over-panel p {
   font-family: sans-serif;
-  font-size: 14px;
-  font-weight: 600;
+  font-size: 18px;
+  font-weight: bolder;
   color: #df4444;
   margin-bottom: 15px;
 }
